Made some more css modifications

--- a/source/style.css
+++ b/source/style.css
@@ -1,8 +1,8 @@
 
 /* Body stuff */
 body {
-    font-family: "Liberation Sans", Arial, sans-serif;
-    font-size: 90%;
+    font-family: 'EB Garamond';
+    /* font-size: 22px; */
     line-height: 1.4em;
     max-width: 50em;
     margin: auto;
