Added more details to the blog

--- a/source/style.css
+++ b/source/style.css
@@ -7,7 +7,7 @@ body {
     max-width: 50em;
     margin: auto;
     padding: 1em 4%;
-    color: #bbbbbb;
+    color: #777777;
     background: #111111;
 }
 
@@ -27,7 +27,7 @@ h1 {
 /* standard links */
 a, a:visited {
     text-decoration: none;
-    color: #dddddd;
+    color: #ffffff;
 }
 
 a:hover {
@@ -42,7 +42,7 @@ nav {
 }
 
 nav a, nav a:visited {
-    color: #444444;
+    color: #888888;
     text-align: center;
     font-size: 1em;
     text-decoration: none;
