--- a/source/style.css
+++ b/source/style.css
@@ -14,6 +14,7 @@ body {
 
 /* center the header */
 h1 {
+    font-size: 66px;
     text-align: center;
     color: #458588;
     font-weight: normal;
