--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -1,3 +1,5 @@
+/* CSS Theme from the amazing Evan Jones (evanjones.ca) */
+
 a:link { color: #293145; border-bottom: solid thin #293145; }
 a:visited { color: #666; border-bottom: dotted thin #666; }
 a:hover { color: #666; border-bottom: dotted thin #666; }
