--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -49,5 +49,6 @@ h2, .heading, .name {
     margin-right: auto;
     width: 15em;
     border-radius: 10%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
