--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -1,10 +1,30 @@
 /* CSS Theme from the amazing Evan Jones (evanjones.ca) */
 
-a:link { color: #293145; border-bottom: solid thin #293145; }
-a:visited { color: #666; border-bottom: dotted thin #666; }
-a:hover { color: #666; border-bottom: dotted thin #666; }
-a:active { color: #fff; border-bottom: none; }
-a { text-decoration: none; }
+a:link {
+    color: #d6ceba;
+    border-bottom: solid thin #d6ceba;
+}
+
+a:visited {
+    color: #999;
+    border-bottom: dotted thin #999;
+}
+
+a:hover {
+    color: #000;
+    border-bottom: none;
+    background: #fff;
+}
+
+a:active {
+    color: #fff;
+    background: #000;
+    border-bottom: dotted thin #d6ceba;
+}
+
+a {
+    text-decoration: none;
+}
 
 body {
     margin-top: 50px;
@@ -13,14 +33,16 @@ body {
     margin-right: auto;
     min-width: 40em;
     max-width: 800px;
-    border: thin solid #888;
+    border: thin solid #777777;
     font-family: Georgia, Cambria, 'Times New Roman', Times, serif;
     font-size: 16px;
     line-height: 1.4;
+    color: #d6ceba;
+    background: #000000;
 }
 
 h2, .heading, .name {
-    color: #293145;
+    color: #d6ceba;
 }
 
 .heading, .name {
@@ -49,11 +71,10 @@ h2, .heading, .name {
     margin-right: auto;
     width: 15em;
     border-radius: 10%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .quote {
-    color: #555555;
+    color: #aaaaaa;
     font-size: 0.8em;
     padding-top: 10px;
     padding-left: 50px;
