--- a/resources/default.css
+++ b/resources/default.css
@@ -41,6 +41,7 @@ body {
     line-height: 1.4;
     color: #181818;
     background-image: url("/resources/fractal.png");
+    background-attachment: fixed;
 }
 
 .header-div {
